k3s/base/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: phucnhan2809/bdc-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "2.0"
            memory: 1536Mi
          requests:
            cpu: "0.5"
            memory: 512Mi
        securityContext:
          runAsUser: 100
          runAsGroup: 101
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: upload-dir
          mountPath: /app/uploads
        - name: logs-dir
          mountPath: /app/logs
        healthcheck:
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
      volumes:
      - name: upload-dir
        emptyDir: {}
      - name: logs-dir
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: auth-service
