k3s/base/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
      - name: chat-service
        image: phucnhan2809/bdc-chat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        resources:
          limits:
            cpu: "1.0"
            memory: 512Mi
          requests:
            cpu: "0.25"
            memory: 128Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /health
            port: 8083
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8083
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  ports:
  - name: http
    port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: chat-service
