k3s/base/dutylog-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dutylog-service
  labels:
    app: dutylog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dutylog-service
  template:
    metadata:
      labels:
        app: dutylog-service
    spec:
      containers:
      - name: dutylog-service
        image: phucnhan2809/bdc-dutylog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
        resources:
          limits:
            cpu: "1.0"
            memory: 512Mi
          requests:
            cpu: "0.1"
            memory: 128Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8086
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8086
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: dutylog-service
  labels:
    app: dutylog-service
spec:
  ports:
  - name: http
    port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: dutylog-service
