k3s/base/personalize-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personalize-service
  labels:
    app: personalize-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personalize-service
  template:
    metadata:
      labels:
        app: personalize-service
    spec:
      containers:
      - name: personalize-service
        image: phucnhan2809/bdc-personalize:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: "1.0"
            memory: 512Mi
          requests:
            cpu: "0.25"
            memory: 128Mi
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
        livenessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
      volumes:
      - name: data-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: personalize-service
  labels:
    app: personalize-service
spec:
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: personalize-service
