k3s/base/recommender-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender-service
  labels:
    app: recommender-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommender-service
  template:
    metadata:
      labels:
        app: recommender-service
    spec:
      containers:
      - name: recommender-service
        image: phucnhan2809/bdc-recommender:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
        resources:
          limits:
            cpu: "500m"
            memory: 256Mi
          requests:
            cpu: "100m"
            memory: 96Mi
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /health
            port: 8086
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8086
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: recommender-service
  labels:
    app: recommender-service
spec:
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: recommender-service
